--- a/data/README
+++ b/data/README
@@ -7,4 +7,4 @@ Star Traders: A Game of Interstellar Trading
 ============================================
 
 This directory, `data`, contains non-code data related to Star Traders.
-In particular, the desktop file and icons are located here.
+In particular, the desktop file, AppData file and icons are located here.
