--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.16\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2021-01-12 11:31+1100\n"
-"PO-Revision-Date: 2021-01-14 07:01+1100\n"
+"POT-Creation-Date: 2021-01-14 08:36+1100\n"
+"PO-Revision-Date: 2021-01-14 08:55+1100\n"
 "Last-Translator: Rafael Fontenelle <rafaelff@gnome.org>\n"
 "Language-Team: Brazilian Portuguese <ldpbr-translation@lists.sourceforge.net>\n"
 "Language: pt_BR\n"
@@ -30,12 +30,12 @@ msgstr ""
 #. your own language (recommended) or keep it the same as the English
 #. version.  Feel free to look through other translations to see how
 #. others have done this.
-#: data/trader.desktop.in:23 src/intf.c:611
+#: data/trader.desktop.in:23 data/trader.appdata.xml.in:26 src/intf.c:611
 #, c-format
 msgid "Star Traders"
 msgstr "Comerciantes Estelares"
 
-#: data/trader.desktop.in:24
+#: data/trader.desktop.in:24 data/trader.appdata.xml.in:27
 msgid "Play Star Traders, a simple game of interstellar trading"
 msgstr "Jogue Comerciantes Estelares, um jogo simples de comércio interestelar"
 
@@ -44,6 +44,18 @@ msgstr "Jogue Comerciantes Estelares, um jogo simples de comércio interestelar"
 #: data/trader.desktop.in:27
 msgid "game;interstellar;trading;strategy;"
 msgstr "jogo;interestelar;comércio;estratégia;"
+
+#: data/trader.appdata.xml.in:29
+msgid ""
+"Star Traders is a simple game of interstellar trading, where the objective is to create companies, buy and sell shares, borrow "
+"and repay money, in order to become the wealthiest player (the winner)."
+msgstr ""
+"Comerciantes Estelares é um jogo simples de negociação interestelar, cujo objetivo é criar empresas, comprar e vender ações, "
+"emprestar e pagar dinheiro, para se tornar o jogador mais rico (o vencedor)."
+
+#: data/trader.appdata.xml.in:48
+msgid "John Zaitseff"
+msgstr "John Zaitseff"
 
 #: src/trader.c:235
 #, c-format
