--- a/INSTALL
+++ b/INSTALL
@@ -219,6 +219,7 @@ Ubuntu 20.10           x86_64  2.32   Clang (LLVM) 11.0.0
 Ubuntu 20.10           x86_64  2.32   NVIDIA HPC SDK 20.11
 Ubuntu 20.04 LTS       x86_64  2.31   GNU C Compiler 9.3.0
 Ubuntu 20.04 LTS       x86_64  2.31   Clang (LLVM) 10.0.0
+Ubuntu 18.04 LTS       x86_64  2.27   GNU C Compiler 7.5.0
 Fedora 33              x86_64  2.32   GNU C Compiler 10.2.1
 CentOS 8.3             x86_64  2.28   GNU C Compiler 8.3.1
 CentOS 8.3             x86_64  2.28   Intel C/C++ 19.1.2.254
